--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-<!-- test -->
+<!DOCTYPE html>
+
+<html lang="en">
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="./style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@800&display=swap" rel="stylesheet">
+    </head>
+    <body>
+        <div id="contentDiv">
+            <h1>chatter</h1>
+            <label for="room">Room</label> 
+            <input id="room" type="text">
+            <div id="chatDiv">
+                <div id="messages">
+
+                </div>
+                <input type="text">
+            </div>
+        </div>
+
+    </body>
+</html>
