html and css work #2

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
                 <div id="messages">
 
                 </div>
-                <input type="text">
+                <div id="inputContainer">
+                    <input type="text" id="inputSend">
+                    <img src="./send_icon.png"  id="sendIcon" width="16px">
+                </div>
             </div>
         </div>
 
