--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <html lang="en">
     <head>
+        <script src="./script.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -11,15 +12,20 @@
     <body>
         <div id="contentDiv">
             <h1>chatter</h1>
-            <label for="room">Room</label> 
-            <input id="room" type="text">
+            <div id="roomContainer">
+                <label for="room">Room</label> 
+                <input id="room" type="text">
+            </div>
             <div id="chatDiv">
                 <div id="messages">
 
                 </div>
                 <div id="inputContainer">
-                    <input type="text" id="inputSend">
-                    <img src="./send_icon.png"  id="sendIcon" width="16px">
+                    <div id="iconPlacer">
+                        <input type="text" id="inputSend">
+                        <img src="./send_icon.png"  id="sendIcon" width="16px">
+                    </div>
+                    
                 </div>
             </div>
         </div>
