--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div id="inputContainer">
                     <div id="iconPlacer">
                         <input type="text" id="inputSend">
-                        <img src="./send_icon.png"  id="sendIcon" width="16px">
+                        <img onclick="sendMessage()" src="./send_icon.png"  id="sendIcon" width="16px">
                     </div>
                     
                 </div>
