--- a/client/index.html
+++ b/client/index.html
@@ -15,6 +15,8 @@
             <div id="roomContainer">
                 <label for="room">Room</label> 
                 <input id="room" type="text">
+                <div id="roomsJoined">
+                </div>
             </div>
             <div id="chatDiv">
                 <div id="messages">
